# moore_and_lewis_data_selection

./: .env.example  .gitignore  ml_select.py  pyproject.toml
scripts/: ec2_userdata.sh  launch_ec2.sh  setup_kenlm.sh
