[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moore-lewis-data-selection"
version = "0.1.0"
description = "Moore & Lewis (2010) data selection for domain adaptation — KenLM-based Python implementation"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66",
    "pyarrow>=15",
    "boto3>=1.34",
    "s3fs>=2024.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "ruff>=0.4",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.ruff]
line-length = 100
target-version = "py310"
